--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -9,6 +9,9 @@ jobs:
     name: Terraform
     environment: staging 
     steps:
+    - name: checkout repo
+      uses: actions/checkout@v3
+      
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
       with:
