--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - name: checkout repo
       uses: actions/checkout@v3
-      
+
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
       with:
@@ -27,3 +27,7 @@ jobs:
        ARM_SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
        ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
        shell: bash
+
+    - name: Terraform Plan
+      id: plan
+      run: terraform plan
