--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -17,6 +17,13 @@ jobs:
       with:
         terraform_version: 1.1.9
         terraform_wrapper: false
+    - name: Azure login
+      uses: azure/login@v1
+      with:
+          client-id: ${{ secrets.CLIENT_ID }}
+          tenant-id: ${{ secrets.TENANT_ID }}
+          subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
+          enable-AzPSSession: true
     # .github/workflows/staging.yaml
     - name: Terraform Init
       id: init
@@ -31,3 +38,9 @@ jobs:
     - name: Terraform Plan
       id: plan
       run: terraform plan
+      env:
+        ARM_CLIENT_ID: ${{ secrets.CLIENT_ID }} # This doesn't have to be a secret. Client IDs are not sensitive.
+        ARM_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
+        shell: bash
