--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -2,7 +2,10 @@
 on:
     workflow_dispatch: 
     pull_request: 
-
+    
+permissions:
+      id-token: write
+      contents: read
 jobs: 
   terraform:
     runs-on: ubuntu-latest
